--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ owner:
   bio: "Here I place my projects"
   email: jc3992@rit.edu
   # Do not include the @ symbol in your Twitter username
-  twitter: @ChenJenli
+  twitter: ChenJenli
   linkedin: https://www.linkedin.com/in/jenlichen
   github: https://github.com/jenli810006995
   #orcid: # ID Number (ex. 0000-0000-0000-0000)
